--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postprocessing": "^6.37.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.1",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0"
   },
